[metadata]
name = snovault-search
version = 1.0.0
author = Keenan Graham
author_email = ksgraham@stanford.edu
description = Framework-independent package for converting query strings to Elasticsearch queries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ENCODE-DCC/snovault-search
project_urls =
    Bug Tracker = https://github.com/ENCODE-DCC/snovault-search/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    elasticsearch==5.4.0
    elasticsearch-dsl==5.4.0

[options.extras_require]
test =
    pytest==5.3.2
    pytest-mock==2.0.0
    pytest-cov==2.8.1

[options.packages.find]
where = src
